<resources>
    <string name="app_name">TribalPhotos</string>
    <string name="title_home">Home</string>
    <string name="title_photo">Photos</string>
    <string name="title_favorite">Favorites</string>
    <string name="title_user_profile">User Profile</string>

    <string name="fragment_home_button">Go to Gallery</string>
    <string name="fragment_home_welcome">This app is a demonstration prepared for the evaluation of my technical skills on android.\n\nIt was based on the Android Component Architecture and uses the following technologies and libraries:\n
\n-Navigation Component\n-MVVM pattern\n -Dependency injection with Koin \n-Local persistence with Room
\n-Networking with Coroutines and Volley library\nFirebase Crashlitics \n-Extensions
\n- Image management with Picasso library \n-Obfuscation with Proguard</string>


    <string name="fragment_photo_gallery_title_group">PHOTOS</string>
    <string name="fragment_photo_gallery_more_images">SEE MORE PHOTOS</string>
    <string name="fragment_photo_gallery_title_likes">Likes:</string>
    <string name="fragment_photo_gallery_no_items">We couldn\'t find any image.\nMaybe, we could have problem\nwith the Internet connection.</string>

    <string name="fragment_photo_favorite_title_group">SEARCH by Name or Username</string>
    <string name="fragment_photo_favorite_txt_search_hint">Search</string>
    <string name="fragment_photo_favorite_title_username">Username:</string>
    <string name="fragment_photo_favorite_title_name">Name:</string>
    <string name="fragment_photo_favorite_title_info">Portfolio:</string>
    <string name="fragment_photo_favorite_title_portfolio">Portfolio:</string>
    <string name="fragment_photo_favorite_title_bio">Bio:</string>
    <string name="fragment_photo_favorite_title_likes_photos">Total Likes:</string>
    <string name="fragment_photo_favorite_title_total_photos">Total Photos:</string>
    <string name="fragment_photo_favorite_button_remove_favorite">Remove</string>
    <string name="fragment_photo_favorite_no_items">We couldn\'t find any favorite image</string>
    <string name="fragment_photo_favorite_content_descrip">Search image</string>
    <string name="fragment_photo_favorite_search_hint">Search by username or name</string>

    <string name="whoopsText">Whoops!</string>
    <string name="no_item_favorites">You don\'t have any images in\n your favorites. Add them to this\n list by using the star icon on any\n image you like"</string>
    <string name="error_msg_create_database">We couldn\'t open the Database</string>

</resources>