<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tribal.tribalphotos.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action__home_to_gallery"
            app:destination="@id/navigation_photos"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/navigation_photos"
        android:name="com.tribal.tribalphotos.ui.photo.PhotoGalleryFragment"
        android:label="@string/title_photo"
        tools:layout="@layout/fragment_photo_gallery" >
        <action
            android:id="@+id/action_gallery_to_userprofile"
            app:destination="@id/navigation_profile"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
    </fragment>
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.tribal.tribalphotos.ui.favorite.PhotoFavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_photo_favorite" >
        <action
            android:id="@+id/action_favorite_to_userprofile"
            app:destination="@id/navigation_profile"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.tribal.tribalphotos.ui.profile.UserProfileFragment"
        android:label="@string/title_user_profile"
        tools:layout="@layout/fragment_user_profile" />
</navigation>